Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108805

Fix ambiguous relational operators involving QByteArrayView

XMLWordPrintable

    • 13
    • 268652173 (6.4), 4e0ca1bf7 (tqtc/lts-6.2), 4c9311550 (dev), 05e5b87ba (dev), 9b945b381 (dev), fb50ab700 (dev), 4832426d1 (dev), 1f92ff3ee (dev), a08bafc92 (dev), fff6562f8 (dev), 09705c74b (dev)
    • Foundation Sprint 101, Foundations Sprint 102, Foundation Sprint 103

      https://codereview.qt-project.org/c/qt/qtbase/+/444954 extends tst_qstringapisymmetry with symmetry checks involving QByteArrayView. Several of them are ambiguous (at least in C++20, didn't check in C++17), and need to be fixed.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            ivan.solovev Ivan Solovev
            mmutz Marc Mutz
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes